fixing spacing issues

--- a/basketball-scoreboard/index.css
+++ b/basketball-scoreboard/index.css
@@ -1,12 +1,14 @@
 body {
     margin: 0;
     background: #1B244A;
+    display: flex;
 }
 
 h3 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 40px;
     font-weight: 700;
+    margin-bottom: 0;
     text-align: center;
     color: #EEE;
 }
@@ -14,7 +16,15 @@ h3 {
 .container {
     display: flex;
     justify-content: space-around;
+    width: 50%;
+    max-width: 500px;
+    margin: auto;
+   
 }
+.container>div {
+    min-width: 150px;
+}
+
 .score,
 .increment-btn {
     font-family: 'Cursed Timer ULiL', sans-serif;
@@ -22,11 +32,13 @@ h3 {
 
 .score {
     background: #080001;
+    min-width: 15px;
     color: #F94F6D;
     font-weight: 400;
     font-size: 90px;
     line-height: 125px;
     text-align: center;
+    margin: 25px 0;
 }
 
 .increment-btn {
@@ -40,4 +52,10 @@ h3 {
     padding: 10px;
     border: 2px solid #9AABD8;
     border-radius: 5px;
+}
+
+.increment-btn p:hover,
+.increment-btn p:focus {
+    color: #1B244A;
+    background: #9AABD8;
 }
